--- a/index.html
+++ b/index.html
@@ -11,29 +11,35 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <img src="imagens/logo.png" alt="Logo cadinho">
+        <div class="logo">
+            <img src="imagens/logo.png" alt="Logo cadinho">
+            <p>Martelinho de Ouro</p>
+        </div>
         <span id="burguer" class="material-icons" onclick="clickMenu()">
             menu
         </span>
         <menu id="itens">
             <ul>
-                <li><a href="#">Opção 1</a></li>
-                <li><a href="#">Opção 2</a></li>
-                <li><a href="#">Opção 3</a></li>
-                <li><a href="#">Opção 4</a></li>
-                <li><a href="#">Opção 5</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Quem Sou</a></li>
+                <li><a href="#">Trabalhos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </menu>
     </header>
     
     <main>
-        <article>
-            <h2>Testando midia Queries</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis natus amet, officiis optio libero impedit fugit exercitationem ex ipsum delectus deserunt deleniti nemo neque excepturi asperiores eveniet tempora ipsa dicta. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis quasi, ab eligendi sunt doloremque commodi iure atque nostrum debitis, possimus doloribus animi, quas odit. Quo sapiente consectetur itaque nostrum libero!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam iusto aliquam quod incidunt nemo quaerat animi sequi odio officiis dignissimos porro odit eligendi nostrum quidem id, optio ipsa temporibus illum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem consectetur eum, numquam ex enim fugiat nostrum non qui. Quas dicta architecto delectus, dolores dolorem vel culpa nesciunt quo pariatur ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio dolor consectetur reiciendis necessitatibus praesentium suscipit voluptatum quidem voluptas excepturi, soluta perferendis nulla quo. Qui nostrum et velit similique, temporibus dolorem.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo necessitatibus, adipisci odit voluptas vitae excepturi incidunt distinctio animi maiores commodi consequuntur assumenda dolorum aspernatur, dignissimos fugiat nobis iste reprehenderit sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, repellat quod necessitatibus quasi eaque libero, quae nihil sed qui porro esse iusto optio nemo vel praesentium officia molestiae eos tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate odio autem ea molestiae consectetur nemo necessitatibus officia nisi? Recusandae earum voluptate eos! Molestiae error harum cupiditate impedit quo quas fugiat.</p>
+       <section>
+        <h1>Titulo</h1>
+        <p>texto</p>
+       </section>
+       <section>
+            mapa
 
-        </article>
+       </section>
+       <section>
+            nossos clientes
+       </section>
     </main>
 
     <script>
