--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onresize="mudouTamanho()">
     <header>
         <div class="logo">
-            <img src="imagens/logo.png" alt="Logo cadinho">
+            <img src="imagens/CADINHO.png" alt="Logo cadinho">
             <p>Martelinho de Ouro</p>
         </div>
     </header>
